--- a/src/styles/ncd.css
+++ b/src/styles/ncd.css
@@ -3535,7 +3535,7 @@
 .lp-grid {
   display: flex;
   gap: 12px;
-  padding: 6px 14px 10px !important;
+  padding: 6px 14px 16px !important;
   align-items: stretch;
 }
 
